# ai-helpers

./: README.md  hello.py  index.html
README-repo.md/: README.md
ai-native-app-template/: README.md
ai-native-app-template/.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
ai-native-app-template/.github/workflows/: ci.yml  deploy.yml
ai-native-app-template/ai/agents/: dev-agent.yml  ops-agent.yml  qa-agent.yml
ai-native-app-template/ai/evals/: check-spec-compliance.py
ai-native-app-template/ai/mcp/: servers.json
ai-native-app-template/ai/prompts/codegen/: implement-feature.md  spec-from-issue.md
ai-native-app-template/ai/prompts/ops/: incident-response.md
ai-native-app-template/ai/prompts/review/: adversarial.md
ai-native-app-template/backend/: Containerfile  pyproject.toml
ai-native-app-template/backend/app/: main.py
ai-native-app-template/backend/tests/: conftest.py
ai-native-app-template/backend/tests/unit/: test_health.py
ai-native-app-template/docs/: architecture.md
ai-native-app-template/docs/runbooks/: high-error-rate.md
ai-native-app-template/frontend/: Containerfile  nginx.conf
ai-native-app-template/infrastructure/monitoring/: alerts.yml  prometheus.yml
ai-native-app-template/infrastructure/podman/: .env.template  compose.yml
ai-native-app-template/scripts/: qa-check.sh  run-agent.sh  validate-specs.sh
ai-native-app-template/specs/: README.md
ai-native-app-template/specs/adr/: 000-adr-template.md
ai-native-app-template/specs/features/: _template.md
skills/infinite-task-slave/: SKILL.md
(+1 files in other folders)
